fix: change alert messages and handle 400, 500 errors
